[package]
name = "netdebug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
color-eyre = "0.6.2"
humantime = "2.1.0"
rustls = "0.20.6"
rustls-native-certs = "0.6.2"
